--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,29 @@
+:root {
+  --green: #44b337;
+  --darkgreen: #125e1a;
+  --dark: #101c26;
+  --dark2: #426a8c;
+  --dark3: rgb(42, 54, 66);
+  --dark4: #455769;
+  --dark5: rgb(125, 143, 156);
+  --background: rgb(62, 72, 78);
+  --lightDark: rgb(115, 124, 129);
+  --whiteText: rgb(223, 223, 223);
+}
 body {
   margin: 0px;
   padding: 0px;
   font-family: sans-serif;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgb(62, 72, 78);
+}
+.main {
+  height: calc(100vh - 60px);
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  align-items: center;
+  color: whitesmoke;
 }
