--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,7 +9,27 @@
   --background: rgb(62, 72, 78);
   --lightDark: rgb(115, 124, 129);
   --whiteText: rgb(223, 223, 223);
+  --white: rgb(204, 204, 204);
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--dark);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--green);
+}
+
 body {
   margin: 0px;
   padding: 0px;
@@ -24,6 +44,28 @@ body {
   display: flex;
   justify-content: center;
   overflow: hidden;
+  overflow-y: scroll;
   align-items: center;
   color: whitesmoke;
+}
+.loadingContainner {
+  position: absolute;
+  height: calc(100vh - 60px);
+  width: 100vw;
+  top: 60px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.loading {
+  height: 100px;
+  width: 100px;
+}
+.smallLoading {
+  height: 40px;
+  width: 40px;
 }
