--- a/src/css/home/news.css
+++ b/src/css/home/news.css
@@ -1,8 +1,10 @@
 .newsContainner {
   height: 100%;
-  width: 600px;
+  width: 800px;
+  max-width: 100vw;
   /* background-color: var(--dark3); */
   /* z-index: ; */
+  margin: 0 auto;
 }
 .news {
   width: calc(100% - 20px);
