--- a/src/css/nav/nav.css
+++ b/src/css/nav/nav.css
@@ -48,7 +48,8 @@
 }
 .navLink span {
   position: absolute;
-  background-color: rgb(204, 204, 204);
+  /* background-color: rgb(204, 204, 204); */
+  background-color: white;
   width: 100%;
   height: 25px;
   display: flex;
