--- a/src/css/home/news.css
+++ b/src/css/home/news.css
@@ -14,6 +14,7 @@
   height: fit-content;
   border-radius: 20px;
   align-items: center;
+  color: var(--white);
   justify-content: center;
 }
 .newsImgBox {
