--- a/src/css/main.css
+++ b/src/css/main.css
@@ -38,6 +38,7 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: rgb(62, 72, 78);
+  font-family: "Roboto", sans-serif;
 }
 .main {
   height: calc(100vh - 60px);
@@ -63,10 +64,12 @@ body {
   height: 100px;
   width: 100px;
 }
+
 .smallLoading {
   height: 40px;
   width: 40px;
 }
+
 .genre {
   background-color: black;
   color: var(--green);
