--- a/src/css/browse/animeContainner.css
+++ b/src/css/browse/animeContainner.css
@@ -1,9 +1,10 @@
 .browseAnimeContainner {
   height: fit-content;
   padding: 10px 10px 10px 10px;
-  margin-top: 30px;
-  width: 100%;
   max-width: 1400px;
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 30px;
   margin: 0 auto;
 }
 
@@ -13,7 +14,9 @@
 }
 .browseAnimeList {
   height: fit-content;
-  width: 100%;
+  max-width: 100%;
+  width: auto;
+  margin: 0 auto;
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
