add anime search

--- a/src/css/browse/mobile.css
+++ b/src/css/browse/mobile.css
@@ -7,4 +7,22 @@
     width: 95px;
     height: 185px;
   }
+  /* width */
+  ::-webkit-scrollbar {
+    width: 0px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--dark);
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: var(--green);
+  }
 }
